Google Sign In logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AppsProyecto</string>
+    <string name="web_client_id">904961900221-c1pktfr106ndibh0g7f37bb1m960mjki.apps.googleusercontent.com</string>
 </resources>
